Update README.md, dix Dockerfile, fix docker-compose, upfate applocation properties frontend address code refactoring