@@ -41,14 +41,6 @@ sourceSets {
             srcDirs "$buildDir/openapi-generated-src", "$buildDir/wsdl-generated-src"
         }
     }
-    integrationTest {
-        java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            srcDir file('src/integration-test/java')
-        }
-        resources.srcDir file("src/integration-test/resources")
-    }
 }
 
 configurations {
@@ -108,16 +100,3 @@ openApiGenerate{
 }
 
 compileJava.dependsOn tasks.openApiGenerate
-
-task integrationTest(type: Test) {
-    description = 'Runs integration tests.'
-    group = 'verification'
-
-    useJUnitPlatform()
-    jvmArgs(['--enable-preview'])
-
-    testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    classpath = sourceSets.integrationTest.runtimeClasspath
-
-    outputs.upToDateWhen { false }
-}
